--- a/app/templates/app/datos.html
+++ b/app/templates/app/datos.html
@@ -34,13 +34,13 @@
         </tr>
         <tr>
 
-          <th style="background-color:lightpink" color="white">PARTES</th>
+          <th style="background-color:rgb(60, 180, 170)" color="white">PARTES</th>
 
-          <th style="background-color:lightpink" color="white">TEMPERATURA</th>
+          <th style="background-color:rgb(60, 180, 170)" color="white">TEMPERATURA</th>
 
-          <th style="background-color:lightpink" color="white">COLOR</th>
+          <th style="background-color:rgb(60, 180, 170)" color="white">COLOR</th>
 
-          <th style="background-color:lightpink" color="white">IFLAMACIÓN</th>
+          <th style="background-color:rgb(60, 180, 170)"color="white">IFLAMACIÓN</th>
 
         </tr>
         {% for c in misTejidos %}
