--- a/app/templates/app/datos.html
+++ b/app/templates/app/datos.html
@@ -38,9 +38,9 @@
 
           <th style="background-color:rgb(60, 180, 170)" color="white">TEMPERATURA</th>
 
-          <th style="background-color:rgb(60, 180, 170)" color="white">COLOR</th>
+          <th style="background-color:rgb(60, 180, 170)" color="white">CÓLOR</th>
 
-          <th style="background-color:rgb(60, 180, 170)"color="white">IFLAMACIÓN</th>
+          <th style="background-color:rgb(60, 180, 170)"color="white">INFLAMACIÓN</th>
 
         </tr>
         {% for c in misTejidos %}
