--- a/app/templates/app/resultados.html
+++ b/app/templates/app/resultados.html
@@ -27,21 +27,21 @@
             <div class="container" style="text-align:center;">
                 <table class="egt" border=2 width=100%>
                     <tr>
-                        <td scope="row" colspan=5 style="background-color:deeppink">
+                        <td scope="row" colspan=5 style="background-color:rgb(60, 180, 170)">
                             <font size=10 color="white">RESULTADOS</font>
                         </td>
                     </tr>
                     <tr>
 
-                        <th style="background-color:lightpink" color="white">MEDIANA TEMPERATURA</th>
+                        <th style="background-color: rgba(3, 26, 230, 0.377)" color="white">MEDIANA TEMPERATURA</th>
 
-                        <th style="background-color:lightpink" color="white">MEDIANA COLOR</th>
+                        <th style="background-color: rgba(3, 26, 230, 0.377)" color="white">MEDIANA COLOR</th>
 
-                        <th style="background-color:lightpink" color="white">MEDIANA IFLAMACIÓN</th>
+                        <th style="background-color:rgba(3, 26, 230, 0.377)" color="white">MEDIANA IFLAMACIÓN</th>
 
-                        <th style="background-color:lightpink" color="white">MEDIANA POR REGISTRO</th>
+                        <th style="background-color: rgba(3, 26, 230, 0.377)" color="white">MEDIANA POR REGISTRO</th>
 
-                        <th style="background-color:lightpink" color="white">MAX</th>
+                        <th style="background-color:rgba(3, 26, 230, 0.377)" color="white">MAX</th>
 
                     </tr>
                     <tr>
@@ -65,13 +65,13 @@
         <div class="container" style="text-align:center;">
             <table class="egt" border=2 width=100%>
                 <tr>
-                    <td scope="row" colspan=1 style="background-color:deeppink">
+                    <td scope="row" colspan=1 style="background-color:rgb(60, 180, 170)">
                         <font size=10 color="white">TABLA RELACION ARISTA</font>
                     </td>
                 </tr>
                 <tr>
 
-                    <th style="background-color:lightpink" color="white">Lista</th>
+                    <th style="background-color:rgba(3, 26, 230, 0.377)" color="white">Lista</th>
                     {% for diccionario in lista2 %}
                 </tr>
                 <tr>
@@ -85,13 +85,13 @@
         <div class="container" style="text-align:center;">
             <table class="egt" border=2 width=100%>
                 <tr>
-                    <td scope="row" colspan=1 style="background-color:deeppink">
+                    <td scope="row" colspan=1 style="background-color:rgb(60, 180, 170)">
                         <font size=10 color="white">DISTANCIAS</font>
                     </td>
                 </tr>
                 <tr>
 
-                    <th style="background-color:lightpink" color="white">Lista</th>
+                    <th style="background-color:rgba(3, 26, 230, 0.377)" color="white">Lista</th>
                     {% for num in lista %}
                 </tr>
                 <tr>
